# cheart-examples

./: .gitignore  README.md  pyproject.toml
cube_simulation/: waveform.py
example1_simple_stretch/: README.md  run.P  visualize_results.py
example1_simple_stretch/mesh/: cube_FE.B  cube_FE.X  cube_quad_FE.X
example2_simple_stretch_quadratic_expressions/: README.md  run.P  visualize_results.py
example2_simple_stretch_quadratic_expressions/mesh/: cube_quad_FE.B
example3_simple_stretch_fibers/: calc.P  calc2.P  run.P  run2.P  visualize_results.py
example3_simple_stretch_fibers/mesh/: cube_FE.T  cube_quad_FE.PART  cube_quad_FE.T
example4_simple_contraction_hookes/: calc.P  run.P  visualize_results.py
example4_simple_contraction_hookes/mesh/: cube_quad_FE.NBT
example5_idealizedLV_passive/: volume_calc.P
example5_idealizedLV_passive/mesh/: apex  ellipsoid_FE.B  ellipsoid_FE.NBT  ellipsoid_FE.PART  ellipsoid_FE.T  ellipsoid_FE.X  ellipsoid_quad_FE.B  ellipsoid_quad_FE.T  ellipsoid_quad_FE.X  fiber.field  fiber_FE.T  fiber_FE.X  fiber_lin.field  results.py
example6_idealizedLV_cycle/data/: activation.INIT  pressure.INIT
make_mesh/: make_cube.py
src/_cli/: _main.py
